--- a/latex/glossary.tex
+++ b/latex/glossary.tex
@@ -26,12 +26,15 @@
   name=X3D,
   description={whatever x3d is}
 }
-\newacronym{3D}{3D}{Scene Structure and Integration Modelling Language}
-\newacronym{DAG}{DAG}{Scene Structure and Integration Modelling Language}
-\newacronym{XML}{XML}{Scene Structure and Integration Modelling Language}
-\newacronym{VRML}{VRML}{Scene Structure and Integration Modelling Language}
-\newacronym{HTML}{HTML}{Scene Structure and Integration Modelling Language}
-\newacronym{WebGL}{WebGL}{Scene Structure and Integration Modelling Language}
-\newacronym{JSON}{JSON}{Scene Structure and Integration Modelling Language}
-\newacronym{ID}{ID}{Scene Structure and Integration Modelling Language}
-\newacronym{DOM}{DOM}{Scene Structure and Integration Modelling Language}
+\newglossaryentry{WebGL}{
+  name=X3D,
+  description={whatever x3d is}
+}
+\newacronym{3D}{3D}{3 dimensial}
+\newacronym{DAG}{DAG}{Directed Acyclic Graph}
+\newacronym{XML}{XML}{Extensible Markup Language}
+\newacronym{VRML}{VRML}{Virtual Reality Modeling Language}
+\newacronym{HTML}{HTML}{Hypertext Transfer Protocol}
+\newacronym{JSON}{JSON}{JavaScript Object Notation}
+\newacronym{ID}{ID}{Identifier}
+\newacronym{DOM}{DOM}{Document Object Model}
